--- a/verl/trainer/config/generation.yaml
+++ b/verl/trainer/config/generation.yaml
@@ -11,6 +11,7 @@ data:
 
 model:
   path: ~/models/Qwen2-7B-Instruct
+  peft_model_id: null
   external_lib: null
 rollout:
   name: vllm
@@ -25,7 +26,7 @@ rollout:
   ignore_eos: False
   enforce_eager: True
   free_cache_engine: True
-  load_format: dummy_dtensor
+  load_format: dummy_dtensor  # 指定加载模型权重的格式，（如 megatron、dtensor 或 hf）
   tensor_model_parallel_size: 1
   max_num_batched_tokens: 8192
   max_model_len: null
@@ -44,3 +45,7 @@ actor:
   ulysses_sequence_parallel_size: 1 # sp size
   fsdp_config:
     fsdp_size: -1
+
+hydra:
+  run:
+    dir: /home/run/wh-verl/hydra/${now:%Y%m%d_%H%M%S}
