--- a/verl/trainer/config/ppo_trainer.yaml
+++ b/verl/trainer/config/ppo_trainer.yaml
@@ -6,7 +6,7 @@ data:
   max_prompt_length: 512
   max_response_length: 512
   train_batch_size: 1024
-  val_batch_size: null # DEPRECATED: Validation datasets are sent to inference engines as a whole batch, which will schedule the memory themselves
+  val_batch_size: 1024 # DEPRECATED: Validation datasets are sent to inference engines as a whole batch, which will schedule the memory themselves
   return_raw_input_ids: False  # This should be set to true when the tokenizer between policy and rm differs
   return_raw_chat: False
   shuffle: True
@@ -18,10 +18,16 @@ actor_rollout_ref:
   hybrid_engine: True
   model:
     path: ~/models/deepseek-llm-7b-chat
+    peft_model_id: null
     external_lib: null
     override_config: { }
     enable_gradient_checkpointing: True
     use_remove_padding: False
+    lora_rank: 0                                # LoRA 低秩矩阵的秩（设为 >0 表示启用 LoRA，例如 32）
+    lora_alpha: 16                              # LoRA 缩放因子（影响适配层输出的强度）
+    target_modules: all-linear                  # 需要注入 LoRA 的模块名称（如 ['q_proj', 'v_proj']，此处为全部线性层）
+    lora_dropout: 0                             # Dropout 概率
+    use_liger: False                            # 是否使用 Liger 加速库（优化矩阵乘）
   actor:
     strategy: fsdp  # This is for backward-compatibility
     ppo_mini_batch_size: 256
@@ -127,7 +133,7 @@ critic:
       fsdp_size: -1
   ppo_mini_batch_size: ${actor_rollout_ref.actor.ppo_mini_batch_size}
   ppo_micro_batch_size: null # will be deprecated, use ppo_micro_batch_size_per_gpu
-  ppo_micro_batch_size_per_gpu: null
+  ppo_micro_batch_size_per_gpu: ${actor_rollout_ref.actor.ppo_micro_batch_size_per_gpu}
   forward_micro_batch_size: ${critic.ppo_micro_batch_size}
   forward_micro_batch_size_per_gpu: ${critic.ppo_micro_batch_size_per_gpu}
   use_dynamic_bsz: ${actor_rollout_ref.actor.use_dynamic_bsz}
@@ -189,10 +195,16 @@ trainer:
   # auto: find the last ckpt to resume. If can't find, start from scratch
   resume_mode: auto # or disable or resume_path if 
   resume_from_path: False
+  val_before_train: True
   test_freq: -1
   critic_warmup: 0
+  model_local_dir: null
   default_hdfs_dir: null
   del_local_ckpt_after_load: False
-  default_local_dir: checkpoints/${trainer.project_name}/${trainer.experiment_name}
+  default_local_dir: /home/run/wh/rlhf-fsdp/checkpoints_local
   max_actor_ckpt_to_keep: null
   max_critic_ckpt_to_keep: null
+
+hydra:
+  run:
+    dir: /home/run/wh/hydra/${now:%Y%m%d_%H%M%S}
